<resources>
    <string name="app_name">MyFamily</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="sos_text">IN case of emergency, keep telling family members to contact me</string>
    <string name="guard">Guard</string>
    <string name="guard_text">Open when you are on a potntially dangerous journey</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="safty">Safty</string>
    <string name="profile">profile</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>