<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey_bg"
    android:layout_height="match_parent"
    tools:context=".GuardScreen">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_6dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16dp"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="72dp" />

    <TextView

        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/sos_text"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />


    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="@dimen/dimen_96dp"
        android:layout_height="@dimen/dimen_106dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"/>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16dp"
        android:id="@+id/green_card"
        android:layout_width="match_parent"

        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="@dimen/dimen_32dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card">

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/guard_text"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="@dimen/dimen_96dp"
        android:layout_height="@dimen/dimen_106dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"/>



</androidx.constraintlayout.widget.ConstraintLayout>